Implement updating to specific manifest versions in InstallationManager